home-ingress/overlays/prod/plex/ingress.yaml
---
kind: Ingress
apiVersion: networking.k8s.io/v1
metadata:
  name: plex
  namespace: home-ingress
  annotations:
    # traefik.ingress.kubernetes.io/router.entrypoints: web
    # traefik.ingress.kubernetes.io/rule-type: PathPrefixStrip
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - plex.francisco.com.au
    secretName: plex-tls
  rules:
    - host: plex.francisco.com.au
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: plex
                port:
                  number: 32400
